objects/Partner_Quarterly_KPI__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Partner_Quarterly_KPIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cases_Closed_by_Default_YTD__c</fullName>
        <label>Cases Closed by Default YTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cases_Closed_by_Default__c</fullName>
        <label>Cases Closed by Default</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closure_Assessment_YTD__c</fullName>
        <label>Closure Assessment YTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closure_Assessment__c</fullName>
        <label>Closure Assessment</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_From__c</fullName>
        <label>Period From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period_To__c</fullName>
        <label>Period To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <label>Problem Description</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_Assessment_YTD__c</fullName>
        <label>Quality Assessment YTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_Assessment__c</fullName>
        <label>Quality Assessment</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporting_Information__c</fullName>
        <label>Supporting Information</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_KPI_Score__c</fullName>
        <label>Total KPI Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_YTD_KPI_Score__c</fullName>
        <label>Total YTD KPI Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Training_Assessment_YTD__c</fullName>
        <label>Training Assessment YTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Assessment__c</fullName>
        <label>Training Assessment</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>platform__c</fullName>
        <externalId>true</externalId>
        <label>platform</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Partner KPI 1</label>
    <listViews>
        <fullName>KPI_1</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Closure_Assessment__c</columns>
        <columns>Quality_Assessment__c</columns>
        <columns>Quarter__c</columns>
        <columns>Training_Assessment__c</columns>
        <columns>Total_KPI_Score__c</columns>
        <columns>Period__c</columns>
        <filterScope>Everything</filterScope>
        <label>KPI 1</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>KPI-{000000}</displayFormat>
        <label>Partner Quarterly KPI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner KPI 1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>